[gd_scene load_steps=11 format=3 uid="uid://bjc3oepe17a24"]

[ext_resource type="Script" uid="uid://d0qgfvvijomj8" path="res://scripts/store.gd" id="1_jmp1n"]
[ext_resource type="StyleBox" uid="uid://ckr0q3ajn27kr" path="res://style_temp.tres" id="2_atuvt"]
[ext_resource type="Texture2D" uid="uid://dq47xwlg3pwa4" path="res://images/weapons_portraits/ar_shop.png" id="3_codmc"]
[ext_resource type="Texture2D" uid="uid://brmdkm2ix0opo" path="res://images/weapons_portraits/g17_shop.png" id="4_5bups"]
[ext_resource type="Texture2D" uid="uid://dlfu1udpvweav" path="res://images/weapons_portraits/m14_shop.png" id="5_vb4ln"]
[ext_resource type="Texture2D" uid="uid://c4mhgvel1egqo" path="res://images/weapons_portraits/nothing.png" id="6_tmp5q"]
[ext_resource type="Texture2D" uid="uid://c6l12vwljjxgy" path="res://images/decals_n_effects/progress_shop2.png" id="7_tmp5q"]
[ext_resource type="Texture2D" uid="uid://dc0h70vo031bo" path="res://images/decals_n_effects/progress_shop1.png" id="8_phafb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4r5pv"]
bg_color = Color(0.48962224, 0.48962224, 0.48962218, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="SpriteFrames" id="SpriteFrames_phafb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5bups")
}],
"loop": true,
"name": &"g17",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vb4ln")
}],
"loop": true,
"name": &"m14",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tmp5q")
}],
"loop": true,
"name": &"null",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_codmc")
}],
"loop": true,
"name": &"xm15",
"speed": 5.0
}]

[node name="store" type="CanvasLayer"]
script = ExtResource("1_jmp1n")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4r5pv")
metadata/_edit_use_anchors_ = true

[node name="buy prim" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 784.0
offset_top = 14.0
offset_right = 1107.0
offset_bottom = 89.0
scale = Vector2(0.7, 0.7)
theme_override_font_sizes/font_size = 30
text = "buy primary weapons"

[node name="equip prim" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 765.0
offset_top = 100.0
offset_right = 1116.0
offset_bottom = 175.0
scale = Vector2(0.7, 0.7)
theme_override_font_sizes/font_size = 30
text = "equip primary weapons"

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_top = 11.0
offset_right = 2.333374
offset_bottom = 61.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/font_size = 30
text = "x"
autowrap_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="skills_shop" type="Control" parent="Panel"]
visible = false
anchors_preset = 0
offset_left = -77.0
offset_top = 69.0
offset_right = -37.0
offset_bottom = 109.0

[node name="subButton" type="Button" parent="Panel/skills_shop"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1138.0
offset_top = -58.0
offset_right = 1191.3334
offset_bottom = -8.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/font_size = 30
text = "x"
autowrap_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="weapons_shop" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = -85.0
offset_top = 177.0
offset_right = -45.0
offset_bottom = 217.0

[node name="prim_buy" type="Panel" parent="Panel/weapons_shop"]
visible = false
layout_mode = 0
offset_left = 360.0
offset_top = -177.0
offset_right = 1237.0
offset_bottom = 471.0
theme_override_styles/panel = ExtResource("2_atuvt")

[node name="itemlist_prim" type="ItemList" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 0
offset_left = -265.0
offset_top = 10.0
offset_bottom = 638.0
theme_override_font_sizes/font_size = 30

[node name="subButton2" type="Button" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_top = 11.0
offset_right = 2.333496
offset_bottom = 61.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/font_size = 30
text = "x"
autowrap_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="buy_button_shop" type="Button" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -384.0
offset_top = 16.0
offset_right = -213.33325
offset_bottom = 80.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/font_size = 30
text = "buy"
autowrap_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="cost" type="Label" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 0
offset_left = 477.0
offset_top = 88.0
offset_right = 637.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 25
text = "1000 KP"

[node name="weapon" type="AnimatedSprite2D" parent="Panel/weapons_shop/prim_buy"]
position = Vector2(241, 88)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_phafb")
animation = &"m14"

[node name="damage" type="Label" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 0
offset_left = 18.0
offset_top = 169.0
offset_right = 178.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 25
text = "damage - 50"

[node name="prog" type="TextureProgressBar" parent="Panel/weapons_shop/prim_buy/damage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 200.0
offset_top = -9.5
offset_right = 600.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
max_value = 110.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("7_tmp5q")
texture_progress = ExtResource("8_phafb")

[node name="roundsmax" type="Label" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 0
offset_left = 18.0
offset_top = 203.0
offset_right = 188.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 25
text = "mag size - 30"

[node name="prog" type="TextureProgressBar" parent="Panel/weapons_shop/prim_buy/roundsmax"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 195.0
offset_top = -9.5
offset_right = 594.99756
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
value = 30.0
nine_patch_stretch = true
texture_under = ExtResource("7_tmp5q")
texture_progress = ExtResource("8_phafb")

[node name="mags" type="Label" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 0
offset_left = 18.0
offset_top = 236.0
offset_right = 175.0
offset_bottom = 271.0
theme_override_font_sizes/font_size = 25
text = "mags - 4"

[node name="reloadtype" type="Label" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 0
offset_left = 18.0
offset_top = 266.0
offset_right = 242.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 25
text = "reload type - mag"

[node name="recoil" type="Label" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 0
offset_left = 19.0
offset_top = 300.0
offset_right = 176.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 25
text = "recoil - 3"

[node name="prog" type="TextureProgressBar" parent="Panel/weapons_shop/prim_buy/recoil"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 201.5
offset_top = -9.5
offset_right = 601.5
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
max_value = 50.0
value = 3.0
nine_patch_stretch = true
texture_under = ExtResource("7_tmp5q")
texture_progress = ExtResource("8_phafb")

[node name="description" type="Label" parent="Panel/weapons_shop/prim_buy"]
layout_mode = 0
offset_left = 9.0
offset_top = 371.0
offset_right = 866.0
offset_bottom = 637.0
theme_override_font_sizes/font_size = 25
text = "ar 15 - popular base for a lot of weapons, widely spread among 
civilians of usa"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Panel/weapons_shop/prim_buy/description"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.99183196
anchor_bottom = 0.97744364
offset_left = 8.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.44705883)

[node name="prim_equip" type="Panel" parent="Panel/weapons_shop"]
layout_mode = 0
offset_left = 360.0
offset_top = -177.0
offset_right = 1237.0
offset_bottom = 471.0
theme_override_styles/panel = ExtResource("2_atuvt")

[node name="itemlist_eq" type="ItemList" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 0
offset_left = -265.0
offset_top = 10.0
offset_bottom = 638.0
theme_override_font_sizes/font_size = 30

[node name="subButton2" type="Button" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_top = 11.0
offset_right = 2.333496
offset_bottom = 61.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/font_size = 30
text = "x"
autowrap_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="equip" type="Button" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -384.0
offset_top = 16.0
offset_right = -213.33325
offset_bottom = 80.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/font_size = 30
text = "buy"
autowrap_mode = 2
autowrap_trim_flags = 0
icon_alignment = 1

[node name="equipicon" type="AnimatedSprite2D" parent="Panel/weapons_shop/prim_equip"]
position = Vector2(241, 88)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_phafb")
animation = &"m14"

[node name="damage" type="Label" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 0
offset_left = 18.0
offset_top = 169.0
offset_right = 178.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 25
text = "damage - 50"

[node name="prog" type="TextureProgressBar" parent="Panel/weapons_shop/prim_equip/damage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 200.0
offset_top = -9.5
offset_right = 600.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
max_value = 110.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("7_tmp5q")
texture_progress = ExtResource("8_phafb")

[node name="roundsmax" type="Label" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 0
offset_left = 18.0
offset_top = 203.0
offset_right = 188.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 25
text = "mag size - 30"

[node name="prog" type="TextureProgressBar" parent="Panel/weapons_shop/prim_equip/roundsmax"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 195.0
offset_top = -9.5
offset_right = 594.99756
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
value = 30.0
nine_patch_stretch = true
texture_under = ExtResource("7_tmp5q")
texture_progress = ExtResource("8_phafb")

[node name="mags" type="Label" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 0
offset_left = 18.0
offset_top = 236.0
offset_right = 175.0
offset_bottom = 271.0
theme_override_font_sizes/font_size = 25
text = "mags - 4"

[node name="reloadtype" type="Label" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 0
offset_left = 18.0
offset_top = 266.0
offset_right = 242.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 25
text = "reload type - mag"

[node name="recoil" type="Label" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 0
offset_left = 19.0
offset_top = 300.0
offset_right = 176.0
offset_bottom = 335.0
theme_override_font_sizes/font_size = 25
text = "recoil - 3"

[node name="prog" type="TextureProgressBar" parent="Panel/weapons_shop/prim_equip/recoil"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 201.5
offset_top = -9.5
offset_right = 601.5
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
max_value = 50.0
value = 3.0
nine_patch_stretch = true
texture_under = ExtResource("7_tmp5q")
texture_progress = ExtResource("8_phafb")

[node name="description" type="Label" parent="Panel/weapons_shop/prim_equip"]
layout_mode = 0
offset_left = 9.0
offset_top = 371.0
offset_right = 866.0
offset_bottom = 637.0
theme_override_font_sizes/font_size = 25
text = "ar 15 - popular base for a lot of weapons, widely spread among 
civilians of usa"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Panel/weapons_shop/prim_equip/description"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.99183196
anchor_bottom = 0.97744364
offset_left = 8.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.44705883)

[connection signal="pressed" from="Panel/buy prim" to="." method="_on_buy_prim_pressed"]
[connection signal="pressed" from="Panel/equip prim" to="." method="_on_equip_prim_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/skills_shop/subButton" to="." method="_on_sub_button_pressed"]
[connection signal="item_selected" from="Panel/weapons_shop/prim_buy/itemlist_prim" to="." method="_on_itemlist_prim_item_selected"]
[connection signal="pressed" from="Panel/weapons_shop/prim_buy/subButton2" to="." method="_on_sub_button_pressed"]
[connection signal="pressed" from="Panel/weapons_shop/prim_buy/buy_button_shop" to="." method="_on_buy_button_shop_pressed"]
[connection signal="item_selected" from="Panel/weapons_shop/prim_equip/itemlist_eq" to="." method="_on_itemlist_eq_item_selected"]
[connection signal="pressed" from="Panel/weapons_shop/prim_equip/subButton2" to="." method="_on_sub_button_pressed"]
[connection signal="pressed" from="Panel/weapons_shop/prim_equip/equip" to="." method="_on_equip_pressed"]
